contact.css
		/* cyrillic */
		@font-face {
		  font-family: 'Oswald';
		  font-style: normal;
		  font-weight: 400;
		  src: local('Oswald Regular'), local('Oswald-Regular'), url(https://fonts.gstatic.com/s/oswald/v13/C6GGSmqIX4ribdvhAcF3zX-_kf6ByYO6CLYdB4HQE-Y.woff2) format('woff2');
		  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
		}
		/* vietnamese */
		@font-face {
		  font-family: 'Oswald';
		  font-style: normal;
		  font-weight: 400;
		  src: local('Oswald Regular'), local('Oswald-Regular'), url(https://fonts.gstatic.com/s/oswald/v13/Z47oc0BtjIgiXLu7VsCGjX-_kf6ByYO6CLYdB4HQE-Y.woff2) format('woff2');
		  unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
		}
		/* latin-ext */
		@font-face {
		  font-family: 'Oswald';
		  font-style: normal;
		  font-weight: 400;
		  src: local('Oswald Regular'), local('Oswald-Regular'), url(https://fonts.gstatic.com/s/oswald/v13/Qw6_9HvXRQGg5mMbFR3Phn-_kf6ByYO6CLYdB4HQE-Y.woff2) format('woff2');
		  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
		}
		/* latin */
		@font-face {
		  font-family: 'Oswald';
		  font-style: normal;
		  font-weight: 400;
		  src: local('Oswald Regular'), local('Oswald-Regular'), url(https://fonts.gstatic.com/s/oswald/v13/_P8jt3Y65hJ9c4AzRE0V1OvvDin1pK8aKteLpeZ5c0A.woff2) format('woff2');
		  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
		}

		.wrapper {
			overflow-x: hidden;
		}

		.jumbotron {
			height:110vh;
			background-position: center;
			background-repeat: no-repeat;
			background-size: cover;
			-webkit-background-size: cover;
			-moz-background-size: cover;
			-o-background-size: cover;
			background-size: cover;
			background-attachment: fixed;
			margin: 0;
			color: white;
			background-color: transparent;
		}

		.jumbotron h1 {
		    font-family: 'Oswald', sans-serif;
			font-size: 45px;
			letter-spacing: 2px;
			text-transform: uppercase;
			padding-bottom: 15px;
		}

		.landing-text {
			font-family: 'Oswald', sans-serif;
			background: transparent;
			padding-top: 35px;
		}

		.landing-text .container h1 {
		    text-transform: uppercase;
		    font-family: 'Oswald', sans-serif;
		    font-size: 6em;
		    font-weight: 700;
		    margin-bottom: 10px;
		    display: inline;
		    background: linear-gradient(to bottom, #fceabb 0%,#fccd4d 50%,#f8b500 51%,#fbdf93 100%);
		    -webkit-background-clip: text;
		    -webkit-text-fill-color: transparent;
		    background-clip: text;
		}

		.landing-text .container h3 {
			font-family: 'Oswald', sans-serif;
			text-transform: uppercase;
			color: white;
			font-size: 2em;
		}

		#hawaii {
			background-image: url(img/hawaii.jpg);
			margin: 0px;
			padding-top: 0px;
			max-width: 100%;
			max-height: 100%;
		}

		.navbar {
			margin: 0px;
			background-color: transparent;
			font-family: 'Oswald', sans-serif;
			font-size: 19px;
			letter-spacing: 1px;
		}

		.nav-items {
			color: white;
			margin-left: 17px;
			margin-top: 15px;
			padding: 10px 20px 8px 20px !important;
		}

		.nav-items:hover {
			color: gold;
			transition: all 0.3s ease-in-out;
		}

		#contact-style {
			border: 1px solid gold;
		}

		#nav-container {
			padding: 10px;
			margin-bottom: 0px;

		}

		.container {
		    padding: 60px;
		    margin: auto;
		}

		#fighton {
			position: absolute;
			top: 15px;
			left: 10px;
			padding: 10px 20px;
			height: 60px;
		}

		#contact {
					background-color: white;
		}

		#contact h2 {
			font-family: 'Oswald', sans-serif;
			font-size: 40px;
			letter-spacing: 1px;
			outline: 1px;
			text-transform: uppercase;
			padding-bottom: 30px;
		}

		.list-unstyled {
			list-style: none;
		}
		.list-inline li {
			display: inline-block;
		}

		.social-icons a {
			color: white;
		}

		.social-icons .icon:hover {
			color: gold;
			-webkit-transition: all 0.4s ease-in-out;
			-moz-transition: all 0.4s ease-in-out;
			-ms-transition: all 0.4s ease-in-out;
			-o-transition: all 0.4s ease-in-out;
			transition: all 0.4s ease-in-out;
		}

		.footer {
			color: white;
			background-color: black;
			padding-top: 2px;
			padding-bottom: 2px;
		}

		.footer p {
			font-family: 'PT Serif', serif;
			font-size: 14px;
			text-align: center;
			letter-spacing: 1px;
		}

		footer {
			margin: 90px;
		}

